[MNG-8670] Rework BuildPlanExecutor for better events